# DashBoard-LRCO-Paran-

./: .gitignore  Cargo.toml  GEMINI.md  README.md  my_project.db  seed.sql
.specify/: init-options.json
.specify/extensions/: .registry
.specify/integrations/: gemini.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.sqlx/: query-11cf4ea35dabdb41af7f4fb123e7f37c4f9a34cb76451c5ba1305885efa81795.json  query-2cfa00ca30d4715c745d514de19b3742cda148152ac46cae73de1901150790a3.json  query-6de2f0b18f3be3e3c6daf8e8b7f7a55d25eac4448d3bf2224b9054b5116d29b5.json
specs/001-001-planejamento/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-001-planejamento/contracts/: lrco-api.md
src/: main.rs
src/api/: dashboard.rs  mod.rs  sync.rs
src/models/: assessment.rs  class.rs  mod.rs  schema.sql  school.rs
src/services/: dashboard.rs  db.rs  lrco_client.rs  mod.rs  sync.rs
src/ui/: dashboard.rs
templates/: dashboard.html
