[package]
name = "meu-projeto"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = "0.7"
leptos = "0.6"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
reqwest = { version = "0.11", features = [ "json" ] }
tokio = { version = "1", features = [ "full" ] }

[lints]
workspace = true
