[package]
name = "meu-projeto"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = "0.7"
leptos = "0.6"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
reqwest = { version = "0.11", features = [ "json" ] }
tokio = { version = "1", features = [ "full" ] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }

[lints]
workspace = true
